--- a/reusable_learning_app/pubspec.yaml
+++ b/reusable_learning_app/pubspec.yaml
@@ -18,7 +18,7 @@ dev_dependencies:
   flutter_secure_storage: 5.0.2
   dio: 4.0.6
   flutter_lints: ^2.0.0
-
+  percent_indicator: ^4.0.1
 
 flutter:
   uses-material-design: true
