--- a/reusable_learning_app/pubspec.yaml
+++ b/reusable_learning_app/pubspec.yaml
@@ -18,6 +18,11 @@ dev_dependencies:
   flutter_secure_storage: 5.0.2
   dio: 4.0.6
   flutter_lints: ^2.0.0
+  integration_test:
+    sdk: flutter
+  mockito: ^5.2.0
+
+
 
 
 flutter:
