--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,7 @@ django-filter==21.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 Markdown==3.3.7
+psycopg2==2.9.3
 PyJWT==2.4.0
 pytz==2022.1
 sqlparse==0.4.2
