--- a/reusable_learning_app/pubspec.yaml
+++ b/reusable_learning_app/pubspec.yaml
@@ -23,6 +23,8 @@ dev_dependencies:
   mockito: ^5.2.0
   percent_indicator: ^4.0.1
   flip_card: ^0.6.0
+  devicelocale: ^0.5.2
+  get:
 
 flutter:
   uses-material-design: true
