--- a/reusable_learning_app/android/app/src/main/AndroidManifest.xml
+++ b/reusable_learning_app/android/app/src/main/AndroidManifest.xml
@@ -31,4 +31,8 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+
 </manifest>
